# vcpkg-ports

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: build-binaries.yml  test-fesapi.yml  test-ports.yml  test-tenduke-client-ee.yml
FesapiCpp/: README.md  portfile.cmake  usage  vcpkg.json
fesapi/: README.md  fix-configure-file.patch  portfile.cmake  usage  vcpkg.json
fesapi/test/: CMakeLists.txt  main.cpp
tenduke-client-ee/: fix-cmake-dependencies.patch  portfile.cmake  usage  vcpkg.json
tenduke-client-ee/test/: CMakeLists.txt  main.cpp
tenduke-core/: portfile.cmake  usage  use-find-package-nlohmann-json.patch  vcpkg.json
